data/all_generated_tests/raw_wast_tests/call_indirect_MismanagementofBlockNesting_4249.wast
;; 8. **Test Description:**    Utilize `call_indirect` within recursive block constructs, where the block itself contains another block calling `call_indirect`, checking recursion limits and proper unwinding of nested control structures.    - **Constraint Checked:** Recursive nesting management with `call_indirect`.    - **Mismanagement Relation:** Validates that recursive block constructs do not generate faulty unwinding or premature exits.

(assert_invalid
  (module
    (func $f (param i32))
    (type $sig (func (param i32)))
    (table funcref (elem $f))
    (func $recursive-blocks
      (block
        (block
          (i32.const 0)
          (call_indirect (type $sig) (i32.const 0))
          (br 0)
          (call_indirect (type $sig) (i32.const 0))
        )
        (call_indirect (type $sig) (i32.const 0))
      )
    )
  )
  "type mismatch"
)